# BiNEL

./: .gitignore  README.md
ISS/Capstone/CLIPn/: =4.2.0  LICENSE  README.md  pyproject.toml
ISS/Capstone/CLIPn/Rosetta/: check.ipynb
ISS/Capstone/CLIPn/clipn_functions/: comparing_methods.py  helper.py  simulation.py
ISS/Capstone/CLIPn/data/CLIPn_zenodo/: README.md
ISS/Capstone/CLIPn/data/__MACOSX/CLIPn_zenodo/: ._README.md
ISS/Capstone/CLIPn/demo/: CLIPn_integration.ipynb  README.md
ISS/Capstone/CLIPn/scripts/: README.md
ISS/Capstone/CLIPn/scripts/Expression/: CLIPn_multimodal.ipynb
ISS/Capstone/CLIPn/scripts/HCS_datasets/: Prediction_CLIPn.ipynb
ISS/Capstone/CLIPn/scripts/HCS_datasets/database/: 0_meta.csv  0_meta_final.csv  (+25 more)
ISS/Capstone/CLIPn/scripts/Hypoxia/: Embedding.ipynb
ISS/Capstone/CLIPn/scripts/Simulation/: Embedding.ipynb
ISS/Capstone/scGeneScope/: .gitignore  LICENSE.txt  README.md  compute_auroc_from_ckpt.py  make_dmso_rank_matched.py  multimodal_perclass.py  pyproject.toml  savelog.ipynb  unimodal_perclass.py
ISS/Capstone/scGeneScope/analysis/: command.ipynb  explore.ipynb  per_class.csv  plot.ipynb  vsDMSO.ipynb  vsDMSO_CP.txt  vsDMSO_GE.txt  vsDMSO_scVI_n200.txt  vsDMSO_wilcoxon_top1.txt
ISS/Capstone/scGeneScope/notebooks/: croissant.json  data_exploration.ipynb  dd.ipynb  generate_image_embeddings.ipynb  generate_rnaseq_embeddings.ipynb
ISS/Capstone/scGeneScope/outputs/: CCA_matched.csv  CCA_random.csv  plotplot.ipynb
ISS/Capstone/scGeneScope/scripts/: download_all_imaging_data.sh  download_scRNAseq_data.sh  download_single_imaging_plate.sh
ISS/Capstone/scGeneScope/src/scgenescope/: __init__.py  exceptions.py  types.py
(+492 files in other folders)
