[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clipn-local"
version = "0.0.0"
description = "Local CLIPn project"
requires-python = ">=3.7"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["clipn*", "functions*"]
