[tool.poetry]
name = "scGeneScope"
version = "0.0.1"
description = "scGeneScope: A Perturbationally-Paired Single Cell Imaging and Transcriptomics Dataset and Benchmark for Treatment Response Modeling"
authors = [
    "Marcel Nassar <mnassar@altoslabs.com>",
    "Ridvan Eksi <reksi@altoslabs.com>",
    "Joel Dapello <jdapello@altoslabs.com>",
]

readme = "README.md"

packages = [
    { include = "scgenescope", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
torch = ">=2.2.0"
hydra-core = "^1.3.2"
hydra-colorlog = "^1.2.0"
lightning = ">=2.2.0"
anndata = "^0.10.6"
numpy = "^2.1.3"
rich = {extras = ["jupyter"], version = "^13.8.1"}
p_tqdm = "^1.4.2"
tables = "^3.10.2"
more-itertools = "^10.7.0"
scikit-learn = "^1.6.1"
torch-geometric = "^2.6.1"
tensorboardx = "^2.6.2.2"
huggingface-hub = {extras = ["cli"], version = "^0.31.2"}
hf-transfer = "^0.1.9"

[tool.poetry.scripts]
train = "scgenescope.scripts.train:main"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
ipykernel = "^6.29.5"
ruff = "^0.11.9"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"
